# JiPP_laboratorium

./: .gitignore  info.txt
kontenery/: CMakeLists.txt  run.sh
kontenery/include/kontenery/: Employee.h  HRMS.h
kontenery/src/: Employee.cpp  HRMS.cpp  main.cpp
lab1/zadanie1/: run.cmd  sort.cpp
lab1/zadanie2/: palindrom.cpp  run.cmd
lab1/zadanie3/: bmi.cpp  run.cmd
lab1/zadanie4/: main.cpp  run.cmd
lab1/zadanie5/: main.cpp  run.cmd
lab2/zadanie1/: run.cmd  swap.cpp
lab2/zadanie2/: swap.cpp
lab2/zadanie3/: swap.cpp
lab2/zadanie4/: main.cpp
lab2/zadanie5/: main.cpp
lab2/zadanie6/: info.txt  main.cpp
lab3/: CMakeLists.txt  macierz.cpp  macierz.hpp  macierz_b.txt  main.cpp  matrix.cpp  matrix.hpp  run.sh
lab3/include/lab4/: matrix.h  matrix_exceptions.h
lab3/src/: main.cpp  matrix.cpp  matrix_exceptions.cpp
lab3/tests/: iloczyn.txt  p
lab4/src/: matrix.h
lab8/: CMakeLists.txt  run.bat
lab8/include/lab8/: philosopher.h
lab8/src/: main.cpp  philosopher.cpp
projekt/: CMakeLists.txt  CMakeLists_.txt  CMakeLists_new.txt  run.bat
projekt/include/app/: App.h  MainFrame.h  PrecisionFrame.h  ResultFrame.h  UIMatrix.h
projekt/include/matrix/: matrix.h  matrix_exceptions.h
projekt/src/: MainFrame.cpp  PrecisionFrame.cpp  ResultFrame.cpp  UIMatrix.cpp  app.cpp  matrix.cpp  matrix_exceptions.cpp
zadanie4/: main.cpp
